# mlops2

./: init_setup.sh  main.py  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml
mlops2/: README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
mlops2/.github/workflows/: ci.yaml  python-publish.yaml
mlops2/experiments/: experiments.ipynb  use("Abdoulcommunity");.js
mlops2/src/database_automation.egg-info/: PKG-INFO
