[metadata]
lincense = MIT 
lincense_file = lincense

# These help tools like PyPI categorize your package
classifiers =
    # Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Programming Language :: Python :: 3.10
    # Programming Language :: Python :: 3.11
    # Programming Language :: Python :: 3.12
    # Programming Language :: Python :: 3.13
    Operating System :: OS Independent

[options]
# Automatically find packages in your source directory
packages = find:

# Runtime dependencies your package needs
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7

# Minimum Python version required to use your package
python_requires = >=3.7

[options.extras_require]
# Optional dependencies for development/testing
testing =
    pytest >= 8.1.1         # Unit testing framework
    mypy >= 1.9.0           # Static type checker
    flake8 >= 7.0.0         # Code style and linting
    tox >= 4.14.1           # Environment and test automation